--- a/oj_system_backend/src/main/resources/application.yml
+++ b/oj_system_backend/src/main/resources/application.yml
@@ -42,6 +42,9 @@ spring:
     multipart:
       # 大小限制
       max-file-size: 10MB
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
 server:
   address: 0.0.0.0
   port: 8121
