新增代码沙箱功能的实现（跑通代码沙箱的基本流程）

--- a/oj_system_backend/src/main/resources/application.yml
+++ b/oj_system_backend/src/main/resources/application.yml
@@ -103,3 +103,6 @@ knife4j:
         api-rule: package
         api-rule-resources:
           - asia.huangzhitao.huangOJ.controller
+
+codesandbox:
+  type: example
